# MathematicalOperations

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml  main.yml
include/: Operations.h
src/: Operations.cpp
tests/: TestFactorial.cpp
